2015-04-15  Brent Fulgham  <bfulgham@apple.com>

        [Mac] Disable "Save to Downloads" option for local files
        https://bugs.webkit.org/show_bug.cgi?id=143794

        Reviewed by Tim Horton.

        Disable the Image and Media download options if the download
        target is a local file. We can only download web resources;
        anything else is actually a no-op.

        * UIProcess/mac/WKActionMenuController.mm:
        (-[WKActionMenuController _defaultMenuItemsForVideo]):
        (-[WKActionMenuController _defaultMenuItemsForImage]):

2015-04-15  Anders Carlsson  <andersca@apple.com>

        Make websiteDataStore on WKWebViewConfiguration public
        https://bugs.webkit.org/show_bug.cgi?id=143810

        Reviewed by Dan Bernstein.

        * UIProcess/API/Cocoa/WKWebView.mm:
        (-[WKWebView initWithFrame:configuration:]):
        * UIProcess/API/Cocoa/WKWebViewConfiguration.h:
        * UIProcess/API/Cocoa/WKWebViewConfiguration.mm:
        (-[WKWebViewConfiguration copyWithZone:]):
        (-[WKWebViewConfiguration websiteDataStore]):
        (-[WKWebViewConfiguration setWebsiteDataStore:]):
        (-[WKWebViewConfiguration _websiteDataStore]):
        (-[WKWebViewConfiguration _setWebsiteDataStore:]):

2015-04-15  Anders Carlsson  <andersca@apple.com>

        Make WKWebsiteDataStore public
        https://bugs.webkit.org/show_bug.cgi?id=143805

        Reviewed by Dan Bernstein.

        Rename the current _WKWebsiteDataStore to WKWebsiteDataStore. Make init unavailable and tighten up the
        types of the defaultDataStore and nonPersistentDataStore class methods.
        
        Add a new _WKWebsiteDataStore @interface and @implementation that derives from WKWebsiteDataStore
        and forwards the defaultDataStore and nonPersistentDataStore method calls.

        * Shared/API/Cocoa/WebKit.h:
        * Shared/Cocoa/APIObject.mm:
        (API::Object::newObject):
        * UIProcess/API/Cocoa/WKWebView.mm: