@@ -1,3 +1,13 @@
+2015-04-16  Csaba Osztrogonác  <ossy@webkit.org>
+
+        [GTK] Run forwarding headers generator unconditionally
+        https://bugs.webkit.org/show_bug.cgi?id=143819
+
+        Reviewed by Carlos Garcia Campos.
+
+        * TestWebKitAPI/PlatformGTK.cmake:
+        * WebKitTestRunner/PlatformGTK.cmake:
+
 2015-04-15  Gyuyoung Kim  <gyuyoung.kim@webkit.org>
 
         [EFL] Add gnutls to jhbuild.module
