@@ -1,3 +1,12 @@
+2015-04-16  Csaba Osztrogonác  <ossy@webkit.org>
+
+        [GTK] Run forwarding headers generator unconditionally
+        https://bugs.webkit.org/show_bug.cgi?id=143819
+
+        Reviewed by Carlos Garcia Campos.
+
+        * PlatformGTK.cmake:
+
 2015-04-15  Brent Fulgham  <bfulgham@apple.com>
 
         [Mac] Disable "Save to Downloads" option for local files
